--- a/src/window.ui
+++ b/src/window.ui
@@ -6,14 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>291</width>
-    <height>345</height>
+    <width>664</width>
+    <height>733</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Window</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <widget class="QLabel" name="image_label">
+     <property name="text">
+      <string>TextLabel</string>
+     </property>
+    </widget>
+   </item>
    <item>
     <widget class="MyGLWidget" name="myGLWidget" native="true">
      <property name="minimumSize">
