--- a/src/window.ui
+++ b/src/window.ui
@@ -6,14 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>664</width>
-    <height>733</height>
+    <width>998</width>
+    <height>571</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Window</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <widget class="QLabel" name="image_label">
+     <property name="text">
+      <string>TextLabel</string>
+     </property>
+    </widget>
+   </item>
    <item>
     <widget class="MyGLWidget" name="myGLWidget" native="true">
      <property name="minimumSize">
@@ -22,10 +29,14 @@
        <height>200</height>
       </size>
      </property>
+     <zorder>image_label</zorder>
     </widget>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
+     <property name="spacing">
+      <number>6</number>
+     </property>
      <item>
       <widget class="QLabel" name="label">
        <property name="text">
